--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
 
     - name: Build Docker image
       run: docker build -t dokodine-frontend:${{ github.sha }} .
@@ -18,6 +19,14 @@ jobs:
     - name: Run Docker container
       run: |
         docker run -d -p 3000:3000 --name dokodine-frontend-container dokodine-frontend:${{ github.sha }}
+        docker run --rm --network container:dokodine-frontend-container appropriate/curl -s -f http://localhost:3000 || exit 1
+
+
+    - name: Stop and remove container
+      if: always()
+      run: |
+        docker stop dokodine-frontend-container
+        docker rm dokodine-frontend-container
 
   terraform:
     needs: [build-and-test]
